<resources>
    <string name="app_name">Action</string>
    <string name="title_train_dashboard">Train</string>
    <string name="title_test_dashboard">Test</string>
    <string name="title_setting_dashboard">Advanced</string>
    <string name="cop_btn_title">Cop 👮</string>
    <string name="hungry_btn_title">Hungry 😋</string>
    <string name="headache_btn_title">Headache 🤕</string>
    <string name="about_btn_title">About 💁</string>
    <string name="record_train_title">Record Train Actions</string>
    <string name="start_train_title">Start Training 🏃</string>
    <string name="about_page_title">Made with ♥ \n by \n Team Rekam</string>
    <string name="test_action_title">Record Test Actions</string>
    <string name="algorithm_label">Algorithm</string>
    <string name="choose_algorithm">Choose an Algorithm</string>
    <string name="generate_btn_label">Compute 📊</string>
    <string name="clear_btn_label">Clear ✖️</string>
    <string name="test_help">ⓘ Record Test Actions, select Algorithm and click Compute to generate True Positive and False Positive rates</string>
    <string name="training_help">ⓘ Touch and hold a button under Record Actions to record the action and leave to stop recording.\nThen click Start Training to start the training process.</string>
    <string name="training_status" />
    <string name="generated_accuracies" />
    <string name="delete_db_label">Delete DB</string>
    <string name="delete_table_btn_label">Delete Table</string>
    <string name="table_selection_label">Table</string>
    <string name="delete_help">⚠ Click the button 10 times to execute the delete behaviour</string>
    <string name="do_it_my_way_label">Merge and collect sensor readings</string>
</resources>
