<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/test_action_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_action_title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginLeft="10dp"
        android:textFontWeight="800"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="left"/>
    <LinearLayout
        android:id="@+id/relative_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/test_action_title"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cop_train"
            android:text="@string/cop_btn_title"
            android:textColor="@android:color/white"
            android:background="@drawable/record_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/hungry_train"
            android:text="@string/hungry_btn_title"
            android:textColor="@android:color/white"
            android:background="@drawable/record_button"
            android:layout_width="160dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/relative_layout_2"
        android:layout_below="@id/relative_layout_1"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/headache_train"
            android:text="@string/headache_btn_title"
            android:textColor="@android:color/white"
            android:layout_width="160dp"
            android:background="@drawable/record_button"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/about_train"
            android:text="@string/about_btn_title"
            android:textColor="@android:color/white"
            android:layout_width="160dp"
            android:background="@drawable/record_button"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/relative_layout_3"
        android:layout_below="@id/relative_layout_2"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:gravity="left"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/algo_selection_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/algorithm_label"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:labelFor="@id/algo_drop_down"
            android:textSize="15sp"
            android:gravity="center"/>
        <Spinner
            android:id="@+id/algo_drop_down"
            android:text="@string/start_train_title"
            android:layout_below="@id/relative_layout_2"
            android:layout_width="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:prompt="@string/choose_algorithm"
            android:entries="@array/algorithms_available"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/relative_layout_4"
        android:layout_below="@id/relative_layout_3"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/generate_acc_btn"
        android:text="@string/generate_btn_label"
        android:textColor="@android:color/white"
        android:background="@drawable/submit_button"
        android:layout_width="160dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/clear_test_btn"
        android:text="@string/clear_btn_label"
        android:layout_width="160dp"
        android:background="@drawable/clear_button"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/relative_layout_5"
        android:layout_below="@id/relative_layout_4"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/test_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_help"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/generated_accuracies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generated_accuracies"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>