<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/record_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/record_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/about_page_title"
            android:textFontWeight="800"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_rows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/record_title_layout"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/do_it_my_way_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/record_title"
            android:layout_margin="10dp"
            android:text="@string/do_it_my_way_label" />

        <Button
            android:id="@+id/del_db_btn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/record_button"
            android:text="@string/delete_db_label"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/table_selection_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/table_drop_down"
                android:text="@string/table_selection_label"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/table_drop_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:entries="@array/tables_available" />
        </LinearLayout>

        <Button
            android:id="@+id/drop_table"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/record_button"
            android:text="@string/delete_table_btn_label"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/delete_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/delete_help"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>